Workflow permission vulnerability (#143)
* Added read permissions to workflows which were previously missing this

* Switched sphinx deploy to use write

* Pull requests write permission for pytest coverage comment

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,10 @@ on:
 
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
+
+permissions:
+  contents: read
+  pull-requests: write
         
 jobs:
   pytest:
